Localisation engine, DrawText, remove redundant pixel class

--- a/Lightning2/Content/Localisation/en-GB-test.ini
+++ b/Lightning2/Content/Localisation/en-GB-test.ini
@@ -5,7 +5,7 @@
 [Metadata]
 LangName = "English (UK) (Test)" 
 LangCode = "en-GB (Test)"
-Version = "1.0";
+Version = "1.0"
 
 [Strings]
-STRING_TEST = "Test string";
+STRING_TEST = "Test string"
