--- a/Lightning2/Content/Localisation/pseudo.ini
+++ b/Lightning2/Content/Localisation/pseudo.ini
@@ -4,7 +4,7 @@
 [Metadata]
 LangName = "Pseudo-localisation test"
 LangCode = "en-GB"
-Version = "1.0";
+Version = "1.0"
 
 [Strings]
-STRING_TEST = "Tést str";
+STRING_TEST = "TÉst sTríNg AHAHAHA"
