Font loading works, add font resize to textmanager

--- a/Lightning2/Content/Localisation/en-GB-test.ini
+++ b/Lightning2/Content/Localisation/en-GB-test.ini
@@ -3,8 +3,8 @@
 
 ; for test purposes :D
 [Metadata]
-LangName = "English (UK) (Test)" 
-LangCode = "en-GB (Test)"
+Name = "English (UK) (Test)" 
+Description = "en-GB (Test)"
 Version = "1.0"
 
 [Strings]
