--- a/Lightning2/Content/Localisation/pseudo.ini
+++ b/Lightning2/Content/Localisation/pseudo.ini
@@ -2,8 +2,8 @@
 ; March 11, 2022
 
 [Metadata]
-LangName = "Pseudo-localisation test"
-LangCode = "en-GB"
+Name = "Pseudo-localisation test"
+Description = "en-GB"
 Version = "1.0"
 
 [Strings]
